added binary variables for full moon and the holidays

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -90,6 +90,57 @@
     "### Save the updated DataFrame back to the same CSV file, overwriting the original file\n",
     "crimes.to_csv(\"Crimes.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inidicating if a day was a full moon or holiday"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Adding a full_moon binary value to weather.csv (since there's a row for each day in that csv)\n",
+    "\n",
+    "# Convert 'use_date' column to datetime objects\n",
+    "weather['use_date'] = pd.to_datetime(weather['use_date'])\n",
+    "full_moon['use_date'] = pd.to_datetime(full_moon['use_date'])\n",
+    "\n",
+    "# Create a new column 'full_moon' initialized with zeros\n",
+    "weather['full_moon'] = 0\n",
+    "\n",
+    "# Set 'full_moon' column to 1 for dates in 'full_moon.csv'\n",
+    "weather.loc[weather['use_date'].isin(full_moon['use_date']), 'full_moon'] = 1\n",
+    "\n",
+    "# Save the updated DataFrame back to the same CSV file, overwriting the original file\n",
+    "weather.to_csv(\"full1.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Adding a full_moon binary value to weather.csv\n",
+    "\n",
+    "# Convert 'use_date' column to datetime objects\n",
+    "weather['use_date'] = pd.to_datetime(weather['use_date'])\n",
+    "holidays['use_date'] = pd.to_datetime(holidays['use_date'])\n",
+    "\n",
+    "# Create a new column 'holiday' initialized with zeros\n",
+    "weather['holiday'] = 0\n",
+    "\n",
+    "# Set 'holiday' column to 1 for dates in 'holidays.csv'\n",
+    "weather.loc[weather['use_date'].isin(holidays['use_date']), 'holiday'] = 1\n",
+    "\n",
+    "# Save the updated DataFrame back to the same CSV file, overwriting the original file\n",
+    "weather.to_csv(\"full1.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
