--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Adding a full_moon binary value to weather.csv\n",
+    "## Adding a holiday binary value to weather.csv\n",
     "\n",
     "# Convert 'use_date' column to datetime objects\n",
     "weather['use_date'] = pd.to_datetime(weather['use_date'])\n",
