trying out some stuff

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,9 +75,15 @@
     "weather.rename(columns={'datetime': 'use_date'}, inplace=True)\n",
     "\n",
     "### Save the updated DataFrame back to the same CSV file, overwriting the original file\n",
-    "weather.to_csv(\"weather.csv\", index=False)\n",
-    "\n",
-    "\n",
+    "weather.to_csv(\"weather.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## Now for Crimes.csv\n",
     "\n",
     "### Convert the 'Date' column to datetime objects\n",
@@ -141,6 +147,82 @@
     "# Save the updated DataFrame back to the same CSV file, overwriting the original file\n",
     "weather.to_csv(\"full1.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Indicating if a crime happened, how many crimes, what types, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert 'use_date' column to datetime objects\n",
+    "full1 = pd.read_csv(\"full1.csv\")\n",
+    "full1['use_date'] = pd.to_datetime(full1['use_date'])\n",
+    "crimes['use_date'] = pd.to_datetime(crimes['use_date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add binary column 'criminal_activity' to weather_df\n",
+    "full1['criminal_activity'] = 0\n",
+    "full1.loc[full1['use_date'].isin(crimes['use_date']), 'criminal_activity'] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add 'crime_count' column to weather_df\n",
+    "crime_count_series = crimes.groupby('use_date').size()\n",
+    "weather_df = pd.merge(full1, crime_count_series, left_on='use_date', right_index=True, how='left')\n",
+    "weather_df.rename(columns={0: 'crime_count'}, inplace=True)\n",
+    "weather_df['crime_count'].fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add binary columns for each 'Primary Type' with count of occurrences on each day\n",
+    "crime_type_counts = crimes.groupby(['use_date', 'Primary Type']).size().unstack(fill_value=0)\n",
+    "crime_type_counts.reset_index(inplace=True)\n",
+    "weather_df = pd.merge(weather_df, crime_type_counts, on='use_date', how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fill NaN values in crime type columns with 0\n",
+    "crime_type_columns = crime_type_counts.columns[1:]  # Exclude 'use_date' column\n",
+    "weather_df[crime_type_columns] = weather_df[crime_type_columns].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the updated DataFrame back to the same CSV file, overwriting the original file\n",
+    "weather_df.to_csv(\"full1.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -159,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
