added on all the different ways to analyze crimes to full2.csv

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,59 +169,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add binary column 'criminal_activity' to weather_df\n",
+    "# Add binary column 'criminal_activity' to full1\n",
     "full1['criminal_activity'] = 0\n",
     "full1.loc[full1['use_date'].isin(crimes['use_date']), 'criminal_activity'] = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add 'crime_count' column to weather_df\n",
+    "# Add 'crime_count' column to full1\n",
     "crime_count_series = crimes.groupby('use_date').size()\n",
-    "weather_df = pd.merge(full1, crime_count_series, left_on='use_date', right_index=True, how='left')\n",
-    "weather_df.rename(columns={0: 'crime_count'}, inplace=True)\n",
-    "weather_df['crime_count'].fillna(0, inplace=True)"
+    "crime_count_series.name = 'crime_count'  # Assign a name to the Series\n",
+    "full1_df = pd.merge(full1, crime_count_series, left_on='use_date', right_index=True, how='left')\n",
+    "full1_df['crime_count'].fillna(0, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add binary columns for each 'Primary Type' with count of occurrences on each day\n",
     "crime_type_counts = crimes.groupby(['use_date', 'Primary Type']).size().unstack(fill_value=0)\n",
     "crime_type_counts.reset_index(inplace=True)\n",
-    "weather_df = pd.merge(weather_df, crime_type_counts, on='use_date', how='left')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "full1_df = pd.merge(full1_df, crime_type_counts, on='use_date', how='left')\n",
+    "\n",
     "# Fill NaN values in crime type columns with 0\n",
     "crime_type_columns = crime_type_counts.columns[1:]  # Exclude 'use_date' column\n",
-    "weather_df[crime_type_columns] = weather_df[crime_type_columns].fillna(0)"
+    "full1_df[crime_type_columns] = full1_df[crime_type_columns].fillna(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the updated DataFrame back to the same CSV file, overwriting the original file\n",
-    "weather_df.to_csv(\"full1.csv\", index=False)"
+    "full1_df.to_csv(\"full2.csv\", index=False)"
    ]
   }
  ],
