--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -213,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the updated DataFrame back to the same CSV file, overwriting the original file\n",
+    "# Save the updated DataFrame back to the new CSV file\n",
     "full1_df.to_csv(\"full2.csv\", index=False)"
    ]
   }
