added a linear SVM model

--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,15 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -72,6 +75,34 @@
     "\n",
     "print(\"Mean Squared Error:\", mse)\n",
     "print(\"R-squared:\", r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.044444444444444446\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a Linear SVM classifier with 'dual' parameter set explicitly\n",
+    "svm_classifier = LinearSVC(dual=False, random_state=42)\n",
+    "\n",
+    "# Train the classifier on the training data\n",
+    "svm_classifier.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the testing data\n",
+    "y_pred = svm_classifier.predict(X_test)\n",
+    "\n",
+    "# Calculate the accuracy of the classifier\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy:\", accuracy)"
    ]
   },
   {
