--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,15 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.linear_model import LassoCV\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,6 +106,51 @@
     "# Calculate the accuracy of the classifier\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(\"Accuracy:\", accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Going to try L1 Regularization.\n",
+    "## First must standardize:\n",
+    "# Standardize the features\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature: temp, Coefficient: 0.8281362903347543\n",
+      "Feature: feelslike, Coefficient: 0.20328302930520042\n",
+      "Feature: precip, Coefficient: 0.10231933118311169\n",
+      "Feature: windspeed, Coefficient: -0.11225390121544677\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create and fit the Lasso model with cross-validation\n",
+    "lasso_model = LassoCV(cv=5)\n",
+    "lasso_model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Get the selected features and their corresponding coefficients\n",
+    "selected_features_mask = lasso_model.coef_ != 0\n",
+    "selected_features = X.columns[selected_features_mask]\n",
+    "coefficients = lasso_model.coef_[selected_features_mask]\n",
+    "\n",
+    "# Print the selected features and their coefficients\n",
+    "for feature, coefficient in zip(selected_features, coefficients):\n",
+    "    print(f\"Feature: {feature}, Coefficient: {coefficient}\")"
    ]
   },
   {
@@ -184,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
