--- a/ETL-EDA.ipynb
+++ b/ETL-EDA.ipynb
@@ -840,6 +840,95 @@
     "plt.title('Correlation Heatmap')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           use_date  violent_crime_count        temp   feelslike    humidity  \\\n",
+      "count  4.500000e+02           450.000000  450.000000  450.000000  450.000000   \n",
+      "mean   2.022675e+07            10.631111   10.423111    8.379111   69.562000   \n",
+      "std    6.117126e+03             3.583793   10.389274   12.726447   11.047311   \n",
+      "min    2.022011e+07             2.000000  -21.000000  -33.800000   39.600000   \n",
+      "25%    2.022071e+07             8.000000    2.600000   -1.200000   61.525000   \n",
+      "50%    2.023012e+07            10.000000    9.400000    7.750000   70.300000   \n",
+      "75%    2.023081e+07            13.000000   20.300000   20.300000   77.375000   \n",
+      "max    2.024022e+07            23.000000   31.000000   33.800000   95.400000   \n",
+      "\n",
+      "           precip  precipcover   snowdepth   windspeed     uvindex  \\\n",
+      "count  450.000000   450.000000  450.000000  450.000000  450.000000   \n",
+      "mean     3.636969    16.935200    0.182889   26.092222    3.157778   \n",
+      "std      7.427916    19.803722    0.499929    7.523413    2.452124   \n",
+      "min      0.000000     0.000000    0.000000    9.100000    0.000000   \n",
+      "25%      0.000000     0.000000    0.000000   20.550000    1.000000   \n",
+      "50%      0.463000     8.330000    0.000000   25.600000    2.500000   \n",
+      "75%      3.918750    25.000000    0.100000   30.800000    5.000000   \n",
+      "max     83.239000    87.500000    4.700000   54.400000   10.000000   \n",
+      "\n",
+      "        full_moon     holiday  sunrise_time  sunset_time  \n",
+      "count  450.000000  450.000000    450.000000   450.000000  \n",
+      "mean     0.022222    0.037778    388.975556  1105.053333  \n",
+      "std      0.147570    0.190871     41.040442    87.457896  \n",
+      "min      0.000000    0.000000    314.000000   979.000000  \n",
+      "25%      0.000000    0.000000    353.250000  1017.250000  \n",
+      "50%      0.000000    0.000000    396.500000  1112.000000  \n",
+      "75%      0.000000    0.000000    426.000000  1188.000000  \n",
+      "max      1.000000    1.000000    447.000000  1229.000000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate summary statistics\n",
+    "summary_stats = full_df.describe()\n",
+    "\n",
+    "# Print summary statistics\n",
+    "print(summary_stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "use_date: Mean = 20226747.88, Std = 6117.13\n",
+      "violent_crime_count: Mean = 10.63, Std = 3.58\n",
+      "temp: Mean = 10.42, Std = 10.39\n",
+      "feelslike: Mean = 8.38, Std = 12.73\n",
+      "humidity: Mean = 69.56, Std = 11.05\n",
+      "precip: Mean = 3.64, Std = 7.43\n",
+      "precipcover: Mean = 16.94, Std = 19.80\n",
+      "snowdepth: Mean = 0.18, Std = 0.50\n",
+      "windspeed: Mean = 26.09, Std = 7.52\n",
+      "uvindex: Mean = 3.16, Std = 2.45\n",
+      "full_moon: Mean = 0.02, Std = 0.15\n",
+      "holiday: Mean = 0.04, Std = 0.19\n",
+      "sunrise_time: Mean = 388.98, Std = 41.04\n",
+      "sunset_time: Mean = 1105.05, Std = 87.46\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate mean and standard deviation for each variable\n",
+    "variable_stats = []\n",
+    "for column in full_df.columns:\n",
+    "    if full_df[column].dtype != 'object':  # Exclude non-numeric columns\n",
+    "        mean = full_df[column].mean()\n",
+    "        std = full_df[column].std()\n",
+    "        variable_stats.append((column, mean, std))\n",
+    "\n",
+    "# Print variable names, mean, and standard deviation\n",
+    "for variable in variable_stats:\n",
+    "    print(f\"{variable[0]}: Mean = {variable[1]:.2f}, Std = {variable[2]:.2f}\")"
+   ]
   }
  ],
  "metadata": {
